--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,20 @@
-*.sw*
-build/
-libs/
-tmp/
+*.class
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
 .classpath
 .project
 .settings/
 bin/
-build.xml.old
+
 *.jar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+lib
